Revert "Fix java 25 tests"
This reverts commit a307d54583e3a9e965d7cd8fcd246345892beb9f.

Reason for revert: broke bots

Change-Id: I1820a4417fd059db79dbde84120faf842d9b7e2c